# 3-python-package-exercise-team-dominators-1

./: Pipfile  README.md  Testexample.txt  example.py  instructions.md  pyproject.toml
.github/workflow/: build.yaml
.github/workflows/: build.yaml
src/: Stringmanipulate.py  __main__.py  test_Stringmanipulate.py
src/stringmanipulate/: Stringmanipulate.py  __main__.py  test_Stringmanipulate.py
tests/: test_Stringmanipulate.py
